# ck3-modmanager

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  RELEASE.md  main.py  pyproject.toml
scripts/: inspect_db.py
src/ck3_mod_manager/: analyzer.py  main.py
src/ck3_mod_manager/database/: launcher_db.py
src/ck3_mod_manager/gui/: main_window.py
src/ck3_mod_manager/loader/: mod_loader.py
src/ck3_mod_manager/utils/: config.py
tests/: test_database.py  test_launcher_db.py  test_mod_loader.py
