[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ck3-modmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyinstaller>=6.17.0",
    "PySide6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ck3_mod_manager"]
